Fix squished buttons

--- a/projects/plugins/jetpack/extensions/blocks/blogroll/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/blogroll/style.scss
@@ -50,6 +50,7 @@
 			border: 1px solid #8c8f94;
 			border-radius: 0;
 			flex: 1;
+			width: 100%;
 		}
 
 		.jetpack-blogroll-item-submit {
